reverting the password in properties file back to openmrs

--- a/motech-mobile-webapp/prod.properties
+++ b/motech-mobile-webapp/prod.properties
@@ -3,5 +3,5 @@ hibernate.show_sql=false
 
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.username=root
-jdbc.password=helloworld
+jdbc.password=openmrs
 jdbc.url=jdbc:mysql://localhost:3306/motechmobiledb
