--- a/motech-mobile-omp/src/main/resources/rancard.properties
+++ b/motech-mobile-omp/src/main/resources/rancard.properties
@@ -32,8 +32,8 @@
 #
 
 ##Rancard Gateway
-rancard.gateway.user=testuser
-rancard.gateway.password=testpassword
+rancard.gateway.user=
+rancard.gateway.password=
 rancard.gateway.sentStatus=SENT
 rancard.gateway.okStatus=SENT
 rancard.gateway.senderId=MoTeCH
