--- a/motech-mobile-webapp/prod.properties
+++ b/motech-mobile-webapp/prod.properties
@@ -1,17 +1,8 @@
-#hibernate.dialect=org.hibernate.dialect.MySQLDialect
-#hibernate.show_sql=false
-
-#jdbc.driverClassName=com.mysql.jdbc.Driver
-#jdbc.username=root
-#jdbc.password=openmrs
-#jdbc.url=jdbc:mysql://localhost:3306/motechmobiledb
-
-hibernate.dialect=org.hibernate.dialect.HSQLDialect
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.show_sql=false
 
-##Connection
-jdbc.driverClassName=org.hsqldb.jdbcDriver
-jdbc.username=sa
-jdbc.password=
-jdbc.url=jdbc:hsqldb:file:target/motechmobiledb;shutdown=true
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.username=openmrs
+jdbc.password=password
+jdbc.url=jdbc:mysql://localhost:3306/motechmobiledb
 
