Changes for CWC-Reg and ANC-Reg form

--- a/motech-mobile-webapp/src/main/resources/log4j-motech.properties
+++ b/motech-mobile-webapp/src/main/resources/log4j-motech.properties
@@ -53,7 +53,7 @@ log4j.appender.logfile.layout.ConversionPattern=%d %p [%t] [%c] - %m%n
 log4j.logger.org.motechproject.mobile.core.util.QuartzJobExecutionLogger=INFO
 
 # Test SMS gateway log level
-log4j.logger.org.motechproject.mobile.omp.manager.DummyGatewayManagerImpl=INFO
+log4j.logger.org.motechproject.mobile.omp.manager.DummyGatewayManagerImpl=DEBUG
 
 # So that you can tell when attempting to use modem
 log4j.category.smslib=INFO
@@ -113,3 +113,11 @@ log4j.appender.mformsrawlog.layout=org.apache.log4j.PatternLayout
 log4j.appender.mformsrawlog.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %m%n
 
 #log4j.logger.org.springframework.orm.hibernate3=DEBUG
+
+log4j.logger.org.motechproject.mobile.omp.manager.DummyGatewayManagerImpl.dummymessagelog=DEBUG, dummymessagelog
+log4j.additivity.org.motechproject.mobile.omp.manager=false
+log4j.appender.dummymessagelog=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.dummymessagelog.File=${catalina.base}/logs/dummy-message-gateway.log
+log4j.appender.dummymessagelog.DatePattern='.'yyyy-MM-dd
+log4j.appender.dummymessagelog.layout=org.apache.log4j.PatternLayout
+log4j.appender.dummymessagelog.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %m%n
