--- a/motech-mobile-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/motech-mobile-webapp/src/main/webapp/WEB-INF/web.xml
@@ -93,17 +93,21 @@
         <url-pattern>/MessageServiceImplService</url-pattern>
     </servlet-mapping>
 
+    <servlet-mapping>
+        <servlet-name>messagingService</servlet-name>
+        <url-pattern>/messagingService</url-pattern>
+    </servlet-mapping>
 
     <listener>
         <listener-class>com.sun.xml.ws.transport.http.servlet.WSServletContextListener</listener-class>
     </listener>
-    
+
     <servlet>
         <servlet-name>messagingService</servlet-name>
         <servlet-class>com.sun.xml.ws.transport.http.servlet.WSServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
-       
+
 
     <servlet>
         <servlet-name>IMPServlet</servlet-name>
@@ -122,7 +126,7 @@
         <servlet-name>intellivr</servlet-name>
         <url-pattern>/intellivr</url-pattern>
     </servlet-mapping>
-    
+
    <servlet>
         <servlet-name>ivrstats</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -131,7 +135,7 @@
         <servlet-name>ivrstats</servlet-name>
         <url-pattern>/ivrstats</url-pattern>
     </servlet-mapping>
-    
+
     <servlet>
         <servlet-name>oxduldl</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -141,5 +145,5 @@
         <url-pattern>/formupload</url-pattern>
         <url-pattern>/formdownload</url-pattern>
     </servlet-mapping>
-    
+
 </web-app>
