--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -94,8 +94,8 @@ omi.settings.dateFormat=dd/MM/yyyy
 omi.settings.maxConcat=3
 omi.settings.charsPerSMS=160
 omi.settings.concatAllowance=7
-omi.settings.localNumberExpression=0[0-9]{9}
-omi.settings.defaultCountryCode=233
+omi.settings.localNumberExpression=[0-9]{10}
+omi.settings.defaultCountryCode=91
 
 
 
@@ -181,4 +181,12 @@ org.motechproject.mobile.web.error.UnknownRequest=Unknown Request
 #Registrar Web Service Properties
 registrar.webservice.wsdlUrl=http://localhost:8080/openmrs/ws/RegistrarService?wsdl
 registrar.webservice.namespaceUri=http://server.ws.motechproject.org/
+
+
+gupshup.gateway.serviceURL=http://enterprise.smsgupshup.com/GatewayAPI/rest
+gupshup.gateway.userid=2000058269
+gupshup.gateway.password=Openmr5tw
+gupshup.gateway.auth.scheme=plain
+gupshup.gateway.method=SendMessage
+gupshup.gateway.msg.type=TEXT
 
