--- a/motech-mobile-webapp/src/test/resources/test.properties
+++ b/motech-mobile-webapp/src/test/resources/test.properties
@@ -150,3 +150,11 @@ registrar.webservice.namespaceUri=http://server.ws.motechproject.org/
 
 patientNumber=000000000000
 workerNumber=000000000000
+
+## SMS Gupshup Gateway
+gupshup.gateway.serviceURL=http://enterprise.smsgupshup.com/GatewayAPI/rest
+gupshup.gateway.userid=2000058269
+gupshup.gateway.password=Openmr5tw
+gupshup.gateway.auth.scheme=plain
+gupshup.gateway.method=SendMessage
+gupshup.gateway.msg.type=TEXT
