--- a/motech-mobile-webapp/src/test/resources/test.properties
+++ b/motech-mobile-webapp/src/test/resources/test.properties
@@ -93,6 +93,7 @@ imp.validator.genderExpression=[MmFf]
 imp.validator.yesNoExpression=([nN][aA]|[YynN])
 imp.validator.caseStatusExpression=[oOnN]
 imp.validator.numericExpression=([0-9]+(.[0-9]+)?|[nN][aA])
+imp.validator.addressExpression=.*
 
 #Period in minutes within which a duplicate message will be rejected
 imp.request.duplicatePeriod=10080
