renamed prod.properties to ci.properties because it was used only for ci environment and not prod

--- a/pom.xml
+++ b/pom.xml
@@ -559,7 +559,7 @@
                 </file>
             </activation>
             <properties>
-                <config>prod</config>
+                <config>ci</config>
             </properties>
             <distributionManagement>
                 <repository>
