Added support for comma separated recipients and SMS message sender id to be 1982 (#168)

--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -61,7 +61,7 @@ rancard.gateway.user=
 rancard.gateway.password=
 rancard.gateway.sentStatus=SENT
 rancard.gateway.okStatus=SENT
-rancard.gateway.senderId=MoTeCH
+rancard.gateway.senderId=1982
 rancard.gateway.serviceURL=http://app.rancardmobility.com/rmcs/sendMessage.jsp?
 
 ##ORserve Gateway
