--- a/motech-mobile-omp/src/main/resources/rancard.properties
+++ b/motech-mobile-omp/src/main/resources/rancard.properties
@@ -36,5 +36,5 @@ rancard.gateway.user=
 rancard.gateway.password=
 rancard.gateway.sentStatus=SENT
 rancard.gateway.okStatus=SENT
-rancard.gateway.senderId=MoTeCH
+rancard.gateway.senderId=1982
 rancard.gateway.serviceURL=http://app.rancardmobility.com/rmcs/sendMessage.jsp?
