--- a/motech-mobile-imp/src/test/resources/imp.properties
+++ b/motech-mobile-imp/src/test/resources/imp.properties
@@ -61,6 +61,7 @@ imp.validator.yesNoExpression=[YynN]
 imp.validator.caseStatusExpression=[oOnN]
 imp.validator.numericExpression=([0-9]+(.[0-9]+)?|[nN][aA])
 imp.validator.addressExpression=.*
+imp.validator.serialNumberExpression=[[0-9]*[/]*[0-9]*]*
 
 #Period in minutes within which a duplicate message will be rejected
 imp.request.duplicatePeriod=10
