[BalajiN]#169 allowing \ on serial number in opdvisit form.

--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -129,7 +129,7 @@ imp.validator.yesNoExpression=([nN][aA]|[YynN])
 imp.validator.caseStatusExpression=[oOnN]
 imp.validator.numericExpression=([0-9]+(.[0-9]+)?|[nN][aA])
 imp.validator.addressExpression=.*
-imp.validator.serialNumberExpression=[[0-9]*[/]*[0-9]*]*
+imp.validator.serialNumberExpression=[0-9]+[/\\\\][0-9]+|[0-9]+
 
 #Period in minutes within which a duplicate message will be rejected
 imp.request.duplicatePeriod=10080
