#60 : some code for URL decoding , adding a logger

--- a/motech-mobile-webapp/src/main/resources/log4j-motech.properties
+++ b/motech-mobile-webapp/src/main/resources/log4j-motech.properties
@@ -112,4 +112,12 @@ log4j.appender.mformsrawlog.DatePattern='.'yyyy-MM-dd
 log4j.appender.mformsrawlog.layout=org.apache.log4j.PatternLayout
 log4j.appender.mformsrawlog.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %m%n
 
+log4j.logger.org.motechproject.mobile.web.IncomingMessageController.incoming=DEBUG, incominglog
+log4j.additivity.org.motechproject.mobile.web.IncomingMessageController.incoming=true
+log4j.appender.incominglog=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.incominglog.File=${catalina.base}/logs/incoming-message.log
+log4j.appender.incominglog.DatePattern='.'yyyy-MM-dd
+log4j.appender.incominglog.layout=org.apache.log4j.PatternLayout
+log4j.appender.incominglog.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %m%n
+
 #log4j.logger.org.springframework.orm.hibernate3=DEBUG
