#60:Moving mailing logic to motechmodule

--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -184,3 +184,5 @@ org.motechproject.mobile.web.error.UnknownRequest=Unknown Request
 registrar.webservice.wsdlUrl=http://localhost:8080/openmrs/ws/RegistrarService?wsdl
 registrar.webservice.namespaceUri=http://server.ws.motechproject.org/
 
+#Incoming Messages Redirect to this URL
+incoming.message.redirect.url=http://localhost:8080/openmrs/module/motechmodule/incomingmessage.form
