Adding openmrs url to which incoming sms messages will be redirected

--- a/motech-mobile-webapp/src/main/resources/motech-settings.properties
+++ b/motech-mobile-webapp/src/main/resources/motech-settings.properties
@@ -185,4 +185,4 @@ registrar.webservice.wsdlUrl=http://localhost:8080/openmrs/ws/RegistrarService?w
 registrar.webservice.namespaceUri=http://server.ws.motechproject.org/
 
 #Incoming Messages Redirect to this URL
-incoming.message.redirect.url=http://localhost:8080/openmrs/module/motechmodule/incomingmessage.form
+incoming.message.redirect.url=${incoming.message.redirect.url}
