--- a/configs/default.properties
+++ b/configs/default.properties
@@ -5,3 +5,5 @@ jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.username=root
 jdbc.password=openmrs
 jdbc.url=jdbc:mysql://localhost:3306/motechmobiledb
+
+incoming.message.redirect.url=http://localhost:8080/openmrs/module/motechmodule/incomingmessage.form
