The default url redirection should be to motech ghana

--- a/configs/default.properties
+++ b/configs/default.properties
@@ -6,4 +6,4 @@ jdbc.username=root
 jdbc.password=openmrs
 jdbc.url=jdbc:mysql://localhost:3306/motechmobiledb
 
-incoming.message.redirect.url=http://localhost:8080/openmrs/module/motechmodule/incomingmessage.form
+incoming.message.redirect.url=http://motechghana.org/openmrs/module/motechmodule/incomingmessage.form
