--- a/motech-mobile-imp/src/test/resources/imp.properties
+++ b/motech-mobile-imp/src/test/resources/imp.properties
@@ -55,6 +55,7 @@ imp.validator.timeExpression=^((0[0-9]|1[0-2]|2[0-4]):([0-5][0-9]):([0-5][0-9]) 
 imp.validator.defaultDateExpression=^((0[1-9]|[12][0-9]|3[01])-(0[1-9]|1[012])-(19|20)\\d\\d (0[0-9]|1[0-2]|2[0-4]):([0-5][0-9]):([0-5][0-9]) [A|P]M$)
 imp.validator.alphaExpression=[a-zA-Z.,'\\-\\_\\s]+
 imp.validator.alphaNumExpression=[a-zA-Z0-9.,'\\-\\_\\s]+
+imp.validator.nameExpression=[0-9.\\-\\s]*[a-zA-Z]?[a-zA-Z0-9.\\-\\s]*
 imp.validator.phoneTypeExpression=[a-zA-Z]+
 imp.validator.genderExpression=[MmFf]
 imp.validator.yesNoExpression=[YynN]
