--- a/configs/ci.properties
+++ b/configs/ci.properties
@@ -5,3 +5,5 @@ jdbc.driverClassName=org.hsqldb.jdbcDriver
 jdbc.username=sa
 jdbc.password=
 jdbc.url=jdbc:hsqldb:file:target/motechmobiledb;shutdown=true
+
+incoming.message.redirect.url=http://localhost/openmrs/module/motechmodule/incomingmessage.form
