adding url property value in ci.properties

--- a/configs/ci.properties
+++ b/configs/ci.properties
@@ -6,4 +6,4 @@ jdbc.username=sa
 jdbc.password=
 jdbc.url=jdbc:hsqldb:file:target/motechmobiledb;shutdown=true
 
-incoming.message.redirect.url=http://localhost/openmrs/module/motechmodule/incomingmessage.form
+incoming.message.redirect.url=http://motechghana.org/openmrs/module/motechmodule/incomingmessage.form
