--- a/motech-mobile-omp/pom.xml
+++ b/motech-mobile-omp/pom.xml
@@ -146,8 +146,9 @@
             <artifactId>spring-context-support</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.opensymphony.quartz</groupId>
+            <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz</artifactId>
+            <version>2.1.2</version>
         </dependency>
        	<dependency>
             <groupId>com.sun.xml.bind</groupId>
