FIXED MOGH-808: Create Mobile Midwife Agents study

--- a/motech-mobile-webapp/src/test/resources/test.properties
+++ b/motech-mobile-webapp/src/test/resources/test.properties
@@ -108,6 +108,7 @@ imp.xmlparser.formNameTagName=formname
 imp.oxd.oxdFormDefsResource1=/oxd-form-defs/NurseDataEntry
 imp.oxd.oxdFormDefsResource2=/oxd-form-defs/NurseQuery
 imp.oxd.oxdFormDefsResource3=/oxd-form-defs/FieldAgentForms
+imp.oxd.oxdFormDefsResource4=/oxd-form-defs/MmAgentForms
 imp.oxd.senderField=sender
 imp.oxd.senderExpression=sender\\s*=\\s*\\d+
 imp.oxd.queryExpression=query\\s*=\\s*\\w+
